[tool.poetry]
name = "txwtf"
version = "0.1.0"
description = "atx crypto club app"
authors = ["Joe Rivera <tfx@tx.wtf>"]
license = "MIT"
readme = "README.md"
homepage = "https://tx.wtf/"
repository = "https://github.com/atx-crypto-club/txwtf"
keywords = ["social media", "webapp", "txwtf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License"
]
packages = [
    { include = "txwtf" }
]

[tool.poetry.dependencies]
python = "^3.8"
chardet = "^5.2.0"
click = "^8.1.7"
cryptography = "^43.0.0"
email-validator = "^2.2.0"
flake8 = ">=5.0,<6.0"
flake8-import-order = "^0.18.2"
pandas = ">=2.0.3,<2.1"
scikit-learn = ">=1.3,<1.4"
tabulate = "^0.9.0"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
Flask-Login = "^0.6.3"
Flask-Cors = "^4.0.1"
Flask-Migrate = "^4.0.7"
flask-restx = "^1.3.0"
Flask-Reuploaded = "^1.4.0"
Flask-Testing = "^0.8.1"
Flask-Session = "^0.8.0"
requests = "^2.32.3"
Markdown = "^3.6"
markdownify = "^0.13.1"
lxml = "^5.2.2"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
PyMySQL = "^1.1.1"
flask-pydantic = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[console_scripts]
txwtf = "txwtf.__main__:root"
